# thecryptofrontier

./: .dockerignore  .gitignore  .npmrc  .strapi-updater.json  CLAUDE.md  Dockerfile  Dockerfile.frontend.production  Dockerfile.nextjs  Dockerfile.nextjs.simple  PREVIEW_GUIDE.md  README-chromatic.md  README.md  TROUBLESHOOTING.md  auto_deploy.py  check_sanity_keys.py  chromatic.config.json  configurar-netlify.md  controle_servico.sh  deploy-nextjs.sh  deploy-studio-automated.sh  deploy-studio-direct.js  deploy-studio.sh  docker-compose-aliases.sh  docker-compose.cleanup.yml  docker-compose.frontend.yml  docker-compose.guardian-mcp.yml  docker-compose.guardian.yml  docker-compose.nextjs.simple.yml  docker-compose.nextjs.yml  docker-compose.preview.yml  docker-compose.production.yml  docker-compose.yml  fase_00.md  fase_01.md  fase_02.md  fase_03.md  fase_04.md  fase_05.md  find_missing_keys.py  fix_missing_keys.py  (+25 more)
framework_crewai/: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.processor  Dockerfile.streamlit  FRONTEND_PROXY_SOLUCAO.md  LEGACY_TOOLS.md  PROXY_SOLUCAO_NEXTJS.md  README.md  SOLUCAO_FLUXO.md  SOLUCAO_PROXY.md  __init__.py  app.py  app_modular.py  demo_article_for_sanity.py  docker-compose.yml  feeds.json  migrate_to_modular.sh  monitoramento.py  package-lock.json  package.json  process_all_articles.py  process_article_queue.py  publish_to_sanity.py  pyproject.toml  redis_tools.py  requirements.txt  restart_with_caddy.sh  restart_with_frontend.sh  sanity.config.js  setup_redis.sh  simple_demo.py  start_docker.sh  start_nextjs_frontend.sh  (+6 more)
(+2260 files in other folders)
