[tool.poetry]
name = "blog_crew"
version = "0.1.0"
description = "CrewAI para automação de blog"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.28.0"
pydantic = "^2.5.0"
requests = "^2.31.0"
feedparser = "^6.0.10"
unidecode = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88